@@ -4,11 +4,10 @@ todo TOC
 
 
 # 基本介绍
-Raptor是一套高性能、易于使用的分布式远程服务调用(RPC)框架。Raptor具有良好的扩展性，主要模块都支持二次开发，可以方便的扩展。Raptor拥抱契约优先的开发方式，支持生成多语言的客户端和服务端。
+Raptor是一套高性能、易于使用的分布式远程服务调用(RPC)框架。Raptor具有良好的扩展性，主要模块都支持二次开发，可以方便地扩展。Raptor拥抱契约优先的开发方式，以[Protocol Buffer](https://developers.google.com/protocol-buffers/)为契约，支持生成多语言的客户端和服务端（todo 还未支持）。
 
 ## 架构概述
 Raptor中分为服务提供方(RPC Server)，服务调用方(RPC Client)两个角色，以及codegen这个主要插件。
-
 
 * raptor-codegen 通过 `.proto` 文件生成接口文件；
 * Server通过生成的接口的实现类自动生成Servlet，供Client调用；
@@ -21,20 +20,20 @@ Raptor中分为服务提供方(RPC Server)，服务调用方(RPC Client)两个�
 
 ## 模块概述
 
-Raptor框架中主要有client、refer、filter、serialization、provider、endpoint 几个功能模块，各个功能模块都支持通过SPI进行扩展，各模块的交互如下图所示：
+Raptor框架中主要有client、refer、filter、serialization、provider、endPoint 几个功能模块，各个功能模块都支持通过SPI进行扩展，各模块的交互如下图所示：
 
 
 ![](assets/zh_userguide-44fdce8c.png)
 
 
 #### filter
-filter在调用refer和provider之前调用，可以完成统计、并发控制等功能。
+Filter在调用refer和provider之前调用，可以完成统计、并发控制等功能。
 
 #### refer
 持有服务提供方暴露的interface和服务的url，通过调用client和server进行通信。在平常用户使用的时候，refer通常被包装在InvokeHandler中使用。
 
 #### serialize
-将RPC请求中的参数、结果等对象进行序列化与反序列化，即进行对象与字节流的互相转换；默认使用 protobuf协议。
+将RPC请求中的参数、结果等对象进行序列化与反序列化，即进行对象与字节流的互相转换；默认使用protobuf协议。
 
 #### client
 Http客户端，通过设置 `serialization` 可以选择 protobuf binary over HTTP 或者 protobuf json over HTTP。
@@ -43,12 +42,12 @@ Http客户端，通过设置 `serialization` 可以选择 protobuf binary over H
 提供具体服务实现类的具体方法（Method 对象），供外部调用者调用。
 
 #### endpoint
-维护多个provider，负责将provider暴露给web容器。默认实现是endpoint同时作为Servlet，以暴露provider。
+维护多个provider，负责将provider暴露给web容器。默认实现是endPoint同时作为Servlet，以暴露provider。
 
 
 
 ## 配置概述
-Raptor通常和Spring Boot配套使用。子项目raptor-springboot基于spring-boot提供自动配置、自动装配能力进行组装，使raptor形成框架开箱即用。
+Raptor通常和Spring Boot配套使用。子项目raptor-springboot基于spring-boot提供自动配置、自动装配能力进行组装，使raptor框架开箱即用。
 
 
 ### 服务端地址
@@ -112,23 +111,6 @@ Raptor框架定义了三种异常`RaptorBizException`,`RaptorFrameworkException`
 `RaptorFrameworkException`代表框架内部异常。
 
 
-# 常用功能介绍
-## mock测试
-Raptor提供MockClient进行客户端的mock。
-
-### 使用MockClinet进行mock
-使用MockClinet的方法为构造MockClinet，声明为spring bean：
-```java
-@Bean
-public Client createMockClient(){
-    byte[] mockData = new byte[0];
-    MockClient mockClient = MockClient.builder()
-            .content(mockData).build();
-    return mockClient;
-}
-```
-其中`mockData`为自定义的byte数组，这里用空数组，也可以通过`serialization`来构造`mockData`。
-
 
 # 运维及监控
 
@@ -141,15 +123,15 @@ com.ppdai.framework.raptor.filter.AbstractAccessLogFilter- refer/server|client h
 各个属性含义如下：
 * refer/server -- `refer`代表客户端，`server`代表服务端
 * client host --  该请求客户端主机IP
-* server host -- 该请求服务端端主机IP
+* server host -- 该请求服务端主机IP
 * interface -- 该请求的完全限定类名
 * method -- 请求方法（interface 定义的方法）
 * version -- 接口版本
-* raptor Version -- 框架版本
+* raptor Version -- raptor框架版本
 * appId -- 应用ID
 * requestId -- 请求ID
 * status code -- 返回结果状态值
-* requestTime -- 相应时间
+* requestTime -- 响应时间
 
 当值不存在时，以空字符串代替。
 
@@ -159,10 +141,60 @@ com.ppdai.framework.raptor.filter.AbstractAccessLogFilter- refer/server|client h
 Raptor默认启用[Metrics](http://metrics.dropwizard.io/4.0.0/)统计。
 主要统各个服务的并发数，相应时间，调用次数。
 
-todo 问轶丛tag 具体能干啥
-
 
 # 性能测试
+
+
+Raptor源码中提供了性能测试框架，便于使用者进行性能评估，源码请参考<http://git.ppdaicorp.com/foundation-framework/raptor/tree/master/raptor-benchmark>。
+
+以下是我们测试的结果：
+
+### 测试环境
+
+#### 硬件配置
+
+     Server端：
+     虚拟机配置： 	4C8G
+     系统：	CentOS release 6.7 (Final)
+
+     Client端：
+     虚拟机配置： 	4C8G
+     系统：	CentOS release 6.7 (Final)
+
+#### 软件配置
+     JDK版本：1.8
+
+     JVM参数：
+     -Xms2048m -Xmx2048m -XX:+UseConcMarkSweepGC -XX:+UseParNewGC
+
+### 测试脚本
+
+#### Server测试场景：
+
+单个Client，线程从5递增到100（step 5），测试Server极限性能。
+
+#### Client测试场景：
+1. 在客户端使用`MockClient`模拟发送HTTP请求,实际不发请求。每次调用时返回准备好的二进制数据。这样子测试，测试到了请求在Client所经历的时间，包括序列化，反序列化，Filter等用时。对比二进制序列化和Json序列化。
+2. 使用`Serialization`直接对数据序列化和反序列化。这样只测试了序列化时间和反序列化时间。
+
+### 测试结果
+
+#### Server测试结果：
+
+    请求1KString：单Server极限TPS：3832
+    请求5KString：单Server极限TPS：2816
+    请求10KString：单Server极限TPS：1921
+
+#### Client测试结果：
+
+
+| 测试项目    | 吞吐量 （ops/ms） | 执行时间（ms）|
+| :------------- | :------------- | :------------- |
+|二进制序列化    |  1216.337 ± 519.182 |0.001 ±   0.001 |
+|Json序列化   |   163.101 ±  30.792 |0.006 ±   0.002 |
+|使用二进制序列化发送请求|    41.388 ±   7.153 |0.028 ±   0.013 |
+|使用Json序列化发送请求 |    29.864 ±  10.928 |0.034 ±   0.014 |
+
 
 
 # codegen 详细说明
@@ -174,7 +206,7 @@ Raptor提供一个生成工程项目的命令行工具`raptor-codegen-cli`。可
 ```
 java -jar raptor-codegen-cli-VERSION.jar -i /path/to/proto/file/ -o /path/to/dest/
 ```
-生成项目中并没有直接生成java类，需要再次在项目目录下运行`mvn install`生成java类。
+生成项目中并没有直接生成java类，需要再次在生成的项目目录下运行`mvn install`生成java类。
 
 ## proto2java Maven插件
 通过如下配置使用proto2java插件。
@@ -201,7 +233,7 @@ java -jar raptor-codegen-cli-VERSION.jar -i /path/to/proto/file/ -o /path/to/des
 生成的Java文件默认放在`${project.build.directory}/generated-sources`中，可以通过`<outputDirectory>`属性配置。
 
 ## proto2swagger Maven插件
-proto2swagger插件和proto2java相似。
+proto2swagger插件和proto2java相似，可以生成swagger json文件。通过swagger json 文件，继而生成其他语言的代码。
 
 
 # 其他
